src/test/ui/derives/derives-span-Ord-tuple-struct.stderr
error[E0277]: the trait bound `Error: std::cmp::Ord` is not satisfied
  --> $DIR/derives-span-Ord-tuple-struct.rs:8:5
   |
LL |     Error
   |     ^^^^^ the trait `std::cmp::Ord` is not implemented for `Error`
   |
   = note: required by `std::cmp::Ord::cmp`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
